fixed contact hr, mobile optimized li els, left aligned articles header

--- a/assets/styles/_contact.css
+++ b/assets/styles/_contact.css
@@ -12,6 +12,18 @@
 	rgba(0, 0, 0, 0));
 }
 
+@media (min-width: 980px) {
+	.contact__hr-taper {
+		margin-top: 20px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.contact__hr-taper {
+		margin-top: 50px;
+	}
+}
+
 
 .contact__social-links__box {
 	display: flex;
@@ -30,9 +42,6 @@
 }
 
 @media (min-width: 900px) {
-	.contact__hr-taper {
-		margin-top: -25px;
-	}
 
 	.contact__social-link {
 		margin: 64px;
